force-app/main/default/objects/Loyalty_Program_c__c/Loyalty_Program_c__c.object-meta.xml
<CustomObject>
    <label>Loyalty_Program__c</label>
    <nameField>
        <label>Loyalty_Program__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>