force-app/main/default/objects/Loyalty_Program_c__c/fields/Customer_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_c__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer__c</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loyalty_Programs__c</relationshipLabel>
    <relationshipName>Loyalty_Programs_c</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>