force-app/main/default/objects/Loyalty_Program_c__c/fields/Last_Visited_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Visited_Date_c__c</fullName>
    <label>Last_Visited_Date__c</label>
    <type>Date</type>
</CustomField>