force-app/main/default/objects/Loyalty_Program_c__c/fields/Points_Balance_c__c.field-meta.xml
<CustomField>
    <fullName>Points_Balance_c__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Points_Balance__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>